// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Hero renders actions 1`] = `
<div>
  <section
    class="hero"
  >
    <div
      class="container"
    >
      <div
        class="container justifyContent-center textAlign-center"
      >
        <div
          class="item bp-xs-12 bp-md-8"
        >
          <div
            class="alignItems-center flexDirection-row justifyContent-center marginBottom-5"
          >
            <p
              class="text marginRight-1 fontWeight-700"
            >
              Funded by
            </p>
            <span
              style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
            >
              <span
                style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
              >
                <img
                  alt=""
                  aria-hidden="true"
                  src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%2770%27%20height=%2724%27/%3e"
                  style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
                />
              </span>
              <img
                alt="google"
                data-nimg="intrinsic"
                decoding="async"
                src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
              />
              <noscript />
            </span>
          </div>
          <h1>
            Heading
          </h1>
          <p
            class="text"
          >
            Subheading
          </p>
          <div
            class="actions"
          >
            <a
              class="button md solid c-primary"
              href="/"
            >
              Action
            </a>
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`Hero renders correctly 1`] = `
<div>
  <section
    class="hero"
  >
    <div
      class="container"
    >
      <div
        class="container justifyContent-center textAlign-center"
      >
        <div
          class="item bp-xs-12 bp-md-8"
        >
          <div
            class="alignItems-center flexDirection-row justifyContent-center marginBottom-5"
          >
            <p
              class="text marginRight-1 fontWeight-700"
            >
              Funded by
            </p>
            <span
              style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
            >
              <span
                style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
              >
                <img
                  alt=""
                  aria-hidden="true"
                  src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%2770%27%20height=%2724%27/%3e"
                  style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
                />
              </span>
              <img
                alt="google"
                data-nimg="intrinsic"
                decoding="async"
                src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
              />
              <noscript />
            </span>
          </div>
          <h1>
            Heading
          </h1>
          <p
            class="text"
          >
            Subheading
          </p>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`Hero renders image 1`] = `
<div>
  <section
    class="hero"
  >
    <div
      aria-hidden="true"
      class="bg"
    >
      <span
        style="box-sizing: border-box; display: block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px;"
      >
        <img
          alt=""
          data-nimg="fill"
          decoding="async"
          sizes="100vw"
          src="/_next/image?url=%2Ftest-image&w=3840&q=75"
          srcset="/_next/image?url=%2Ftest-image&w=640&q=75 640w, /_next/image?url=%2Ftest-image&w=750&q=75 750w, /_next/image?url=%2Ftest-image&w=828&q=75 828w, /_next/image?url=%2Ftest-image&w=1080&q=75 1080w, /_next/image?url=%2Ftest-image&w=1200&q=75 1200w, /_next/image?url=%2Ftest-image&w=1920&q=75 1920w, /_next/image?url=%2Ftest-image&w=2048&q=75 2048w, /_next/image?url=%2Ftest-image&w=3840&q=75 3840w"
          style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%; object-fit: cover;"
        />
      </span>
      s
    </div>
    <div
      class="container"
    >
      <div
        class="container justifyContent-center textAlign-center"
      >
        <div
          class="item bp-xs-12 bp-md-8"
        >
          <div
            class="alignItems-center flexDirection-row justifyContent-center marginBottom-5"
          >
            <p
              class="text marginRight-1 fontWeight-700"
            >
              Funded by
            </p>
            <span
              style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
            >
              <span
                style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
              >
                <img
                  alt=""
                  aria-hidden="true"
                  src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%2770%27%20height=%2724%27/%3e"
                  style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
                />
              </span>
              <img
                alt="google"
                data-nimg="intrinsic"
                decoding="async"
                src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
              />
              <noscript />
            </span>
          </div>
          <h1>
            Heading
          </h1>
          <p
            class="text"
          >
            Subheading
          </p>
        </div>
      </div>
    </div>
  </section>
</div>
`;
